--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="container">
         <h2>Sakura Card Memory</h2>
-        <div class="game"></div>
+        <div id="game"></div>
         <button class="reset" onclick="window.location.reload()">Reset Button</button>
     </div>
     <script src="./assets/js/main.js" defer></script>
